--- a/TFM_tex/biblio.bib
+++ b/TFM_tex/biblio.bib
@@ -1,3 +1,57 @@
+@inproceedings{LIME,
+author = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+title = {"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
+year = {2016},
+isbn = {9781450342322},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2939672.2939778},
+doi = {10.1145/2939672.2939778},
+abstract = {Despite widespread adoption, machine learning models remain mostly black boxes. Understanding the reasons behind predictions is, however, quite important in assessing trust, which is fundamental if one plans to take action based on a prediction, or when choosing whether to deploy a new model. Such understanding also provides insights into the model, which can be used to transform an untrustworthy model or prediction into a trustworthy one.In this work, we propose LIME, a novel explanation technique that explains the predictions of any classifier in an interpretable and faithful manner, by learning an interpretable model locally varound the prediction. We also propose a method to explain models by presenting representative individual predictions and their explanations in a non-redundant way, framing the task as a submodular optimization problem. We demonstrate the flexibility of these methods by explaining different models for text (e.g. random forests) and image classification (e.g. neural networks). We show the utility of explanations via novel experiments, both simulated and with human subjects, on various scenarios that require trust: deciding if one should trust a prediction, choosing between models, improving an untrustworthy classifier, and identifying why a classifier should not be trusted.},
+booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+pages = {1135–1144},
+numpages = {10},
+keywords = {interpretable machine learning, interpretability, explaining machine learning, black box classifier},
+location = {San Francisco, California, USA},
+series = {KDD '16}
+}
+
+@article{XAICONCEPTS,
+title = {Explainable Artificial Intelligence (XAI): Concepts, taxonomies, opportunities and challenges toward responsible AI},
+journal = {Information Fusion},
+volume = {58},
+pages = {82-115},
+year = {2020},
+issn = {1566-2535},
+doi = {https://doi.org/10.1016/j.inffus.2019.12.012},
+author = {Alejandro {Barredo Arrieta} and Natalia Díaz-Rodríguez and Javier {Del Ser} and Adrien Bennetot and Siham Tabik and Alberto Barbado and Salvador Garcia and Sergio Gil-Lopez and Daniel Molina and Richard Benjamins and Raja Chatila and Francisco Herrera}
+}
+
+@article{XAINOTIONS,
+title = {Notions of explainability and evaluation approaches for explainable artificial intelligence},
+journal = {Information Fusion},
+volume = {76},
+pages = {89-106},
+year = {2021},
+issn = {1566-2535},
+doi = {https://doi.org/10.1016/j.inffus.2021.05.009},
+url = {https://www.sciencedirect.com/science/article/pii/S1566253521001093},
+author = {Giulia Vilone and Luca Longo}
+}
+
+
+@article{XAIWHATWEKNOW,
+title = {Explainable Artificial Intelligence (XAI): What we know and what is left to attain Trustworthy Artificial Intelligence},
+journal = {Information Fusion},
+volume = {99},
+pages = {101805},
+year = {2023},
+issn = {1566-2535},
+doi = {https://doi.org/10.1016/j.inffus.2023.101805},
+url = {https://www.sciencedirect.com/science/article/pii/S1566253523001148},
+author = {Sajid Ali and Tamer Abuhmed and Shaker El-Sappagh and Khan Muhammad and Jose M. Alonso-Moral and Roberto Confalonieri and Riccardo Guidotti and Javier {Del Ser} and Natalia Díaz-Rodríguez and Francisco Herrera}
+}
+
 
 @article{XSHIELD,
 author = {Sevillano-García, Iván and Luengo, Julián and Herrera, Francisco},
