--- a/TFM_tex/biblio.bib
+++ b/TFM_tex/biblio.bib
@@ -1,3 +1,18 @@
+@article{Regularization,
+author = {Moradi, Reza and Berangi, Reza and Minaei, Behrouz},
+title = {A survey of regularization strategies for deep models},
+year = {2020},
+issue_date = {Aug 2020},
+publisher = {Kluwer Academic Publishers},
+address = {USA},
+volume = {53},
+number = {6},
+issn = {0269-2821},
+url = {https://doi.org/10.1007/s10462-019-09784-7},
+doi = {10.1007/s10462-019-09784-7},
+journal = {Artif. Intell. Rev.}
+}
+
 @inproceedings{LIME,
 author = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
 title = {"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
